--- a/src/frontend/css/components/entities/folder.css
+++ b/src/frontend/css/components/entities/folder.css
@@ -72,18 +72,7 @@ folder-path:hover {
 }
 
 
-.color-blue-1 {background: rgb(121, 144, 255)}
-.color-blue-2 {background: rgb(169, 215, 255)}
-.color-blue-3 {background: rgb(217, 237, 255)}
-.color-green-1 {background: rgb(158, 213, 197)}
-.color-green-2 {background: rgb(203, 255, 197)}
-.color-green-3 {background: rgb(173, 255, 164)}
-.color-purple-1 {background: rgb(142, 122, 181)}
-.color-purple-2 {background: rgb(223, 193, 255)}
-.color-red-1 {background: rgb(255, 163, 163)}
-.color-red-2 {background: rgb(255, 197, 197)}
-.color-orange-1 {background: rgb(255, 182, 116)}
-.color-orange-2 {background: rgb(255, 224, 158)}
+
 
 
 .color-blue-1 p,
@@ -100,16 +89,56 @@ folder-path:hover {
 .color-orange-2 p {color: #1b1c22}
 
 
-.color-blue-1 #folder-icon {color: rgb(50, 72, 177) !important;}
-.color-blue-2 #folder-icon {color: rgb(70, 158, 239)  !important;}
-.color-blue-3 #folder-icon {color: rgb(143, 191, 236) !important;}
-.color-green-1 #folder-icon {color: rgb(36, 169, 130) !important;}
-.color-green-2 #folder-icon {color: rgb(85, 183, 73) !important;}
-.color-green-3 #folder-icon {color: rgb(32, 146, 20) !important;}
-.color-purple-1 #folder-icon {color: rgb(100, 58, 178) !important;}
-.color-purple-2 #folder-icon {color: rgb(167, 103, 236) !important;}
-.color-red-1 #folder-icon { color: rgb(225, 82, 82) !important;}
-.color-red-2 #folder-icon {color: rgb(255, 108, 108) !important;}
-.color-orange-1 #folder-icon {color: rgb(220, 109, 10) !important;}
-.color-orange-2 #folder-icon {color: rgb(239, 170, 21) !important;}
+.light .color-blue-1 {background: rgb(121, 144, 255)}
+.light .color-blue-2 {background: rgb(169, 215, 255)}
+.light .color-blue-3 {background: rgb(217, 237, 255)}
+.light .color-green-1 {background: rgb(158, 213, 197)}
+.light .color-green-2 {background: rgb(203, 255, 197)}
+.light .color-green-3 {background: rgb(173, 255, 164)}
+.light .color-purple-1 {background: rgb(142, 122, 181)}
+.light .color-purple-2 {background: rgb(223, 193, 255)}
+.light .color-red-1 {background: rgb(255, 163, 163)}
+.light .color-red-2 {background: rgb(255, 197, 197)}
+.light .color-orange-1 {background: rgb(255, 182, 116)}
+.light .color-orange-2 {background: rgb(255, 224, 158)}
+
+.light .color-blue-1 #folder-icon {color: rgb(50, 72, 177) !important;}
+.light .color-blue-2 #folder-icon {color: rgb(70, 158, 239)  !important;}
+.light .color-blue-3 #folder-icon {color: rgb(143, 191, 236) !important;}
+.light .color-green-1 #folder-icon {color: rgb(36, 169, 130) !important;}
+.light .color-green-2 #folder-icon {color: rgb(85, 183, 73) !important;}
+.light .color-green-3 #folder-icon {color: rgb(32, 146, 20) !important;}
+.light .color-purple-1 #folder-icon {color: rgb(100, 58, 178) !important;}
+.light .color-purple-2 #folder-icon {color: rgb(167, 103, 236) !important;}
+.light .color-red-1 #folder-icon { color: rgb(225, 82, 82) !important;}
+.light .color-red-2 #folder-icon {color: rgb(255, 108, 108) !important;}
+.light .color-orange-1 #folder-icon {color: rgb(220, 109, 10) !important;}
+.light .color-orange-2 #folder-icon {color: rgb(239, 170, 21) !important;}
+
+
+.dark .color-blue-1 {background: rgb(121, 144, 255)}
+.dark .color-blue-2 {background: rgb(80 141 196)}
+.dark .color-blue-3 {background: rgb(122 179 228)}
+.dark .color-green-1 {background: rgb(100 174 152)}
+.dark .color-green-2 {background: rgb(153 230 145)}
+.dark .color-green-3 {background: rgb(123 219 113)}
+.dark .color-purple-1 {background: rgb(142, 122, 181)}
+.dark .color-purple-2 {background: rgb(180 152 210)}
+.dark .color-red-1 {background: rgb(196 91 91)}
+.dark .color-red-2 {background: rgb(228 141 141)}
+.dark .color-orange-1 {background: rgb(224 154 91)}
+.dark .color-orange-2 {background: rgb(243 182 114)}
+
+.dark .color-blue-1 #folder-icon {color: rgb(31 41 89) !important;}
+.dark .color-blue-2 #folder-icon {color: rgb(7 63 113) !important;}
+.dark .color-blue-3 #folder-icon {color: rgb(34 122 200) !important;}
+.dark .color-green-1 #folder-icon {color: rgb(49 122 101) !important;}
+.dark .color-green-2 #folder-icon {color: rgb(80 175 69) !important;}
+.dark .color-green-3 #folder-icon {color: rgb(9 90 0) !important;}
+.dark .color-purple-1 #folder-icon {color: rgb(100, 58, 178) !important;}
+.dark .color-purple-2 #folder-icon {color: rgb(121 85 161) !important;}
+.dark .color-red-1 #folder-icon { color: #742828 !important;}
+.dark .color-red-2 #folder-icon {color: rgb(192 43 43) !important;}
+.dark .color-orange-1 #folder-icon {color: rgb(193 91 0) !important;}
+.dark .color-orange-2 #folder-icon {color: rgb(225 132 20) !important;}
 
