--- a/src/frontend/css/modals/noteDetailsModal.css
+++ b/src/frontend/css/modals/noteDetailsModal.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     padding: 10px 40px;
     width: 600px;
-    height: 450px;
     background-color: var(--modal);
     border-radius: 15px;
     box-shadow: 0 0 10px var(--shadow);
@@ -15,8 +14,13 @@
     font-weight: 500;
 }
 
+.note-details-modal .note-name-details {
+    color: var(--text);
+    padding: 5px 0;
+}
+
 .note-details-modal table {
-    margin: 50px 0;
+    margin: 0 0 50px 0;
 }
 
 .note-details-modal td {
