--- a/src/frontend/css/textEditor/toolbarTop.css
+++ b/src/frontend/css/textEditor/toolbarTop.css
@@ -60,7 +60,7 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    background-color: var(--dropdown);
+    background: var(--dropdown);
     display: flex;
     flex-direction: column;
     width: 200px;
@@ -84,11 +84,13 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    background-color: var(--dropdown);
+    background: var(--dropdown);
     display: flex;
     flex-direction: column;
     width: 350px;
-    left: 0px;
+    max-height: 300px;
+    overflow-y: scroll;
+    left: 0;
     top: 40px;
     border-radius: 10px;
     padding: 10px;
