--- a/src/frontend/css/views/sticky_note/stickyWallView.css
+++ b/src/frontend/css/views/sticky_note/stickyWallView.css
@@ -11,7 +11,8 @@
 }
 
 
-.standard-sticky-board-view .description {
+.standard-sticky-board-view .description,
+.column-sticky-board-view .description{
     color: var(--less-important);
     max-width: 600px;
     outline: none;
@@ -23,7 +24,8 @@
     max-width: 600px;
 }
 
-.standard-sticky-board-view h2 {
+.standard-sticky-board-view h2,
+.column-sticky-board-view h2{
     color: var(--important);
     outline: none;
 }
@@ -56,15 +58,6 @@
 .sticky-long:hover,
 .sticky-wide:hover{
     scale: 1.025;
-}
-
-.no-stickies-message {
-    position: absolute;
-    top: 20%;
-    left: 33%;
-    font-size: 20px;
-    color: #ced2e6;
-    font-weight: 300;
 }
 
 .add-sticky-btn {
@@ -116,3 +109,138 @@
     background-color: var(--hover-button);
 }
 
+
+
+
+
+/* Columns sticky board view styles*/
+
+.column-sticky-board-view {
+    display: flex;
+    flex-direction: column;
+    outline: none;
+    height: calc(100dvh - 37px);
+    max-height: calc(100dvh - 37px);
+    overflow-y: scroll;
+    padding: 0 5%;
+    opacity: 0;
+    transform: translateY(30%);
+    transition: opacity .7s ease, transform .2s ease;
+}
+
+.board-wrapper {
+    position: relative;
+    display: flex;
+    margin: 50px 0;
+    max-width: 100%;
+    height: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    background-color: transparent;
+}
+
+.board-wrapper::-webkit-scrollbar {
+    height: 8px;
+    background-color: transparent;
+}
+
+.board-wrapper::-webkit-scrollbar-thumb {
+    background-color: #eff0f4;
+    border-radius: 4px;
+}
+
+
+.board-section {
+    display: grid;
+    grid-template-rows: 50px 1fr 30px;
+    height: 550px;
+    width: 460px;
+    min-width: 460px;
+    margin-bottom: 20px;
+}
+
+.board-section-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.board-section-top i {
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    color: #ced2e6;
+}
+
+.stickies-container::-webkit-scrollbar {
+    background-color: transparent;
+    width: 7px;
+}
+
+.stickies-container::-webkit-scrollbar-thumb {
+    background-color: #eff0f4;
+    border-radius: 5px;
+}
+
+.stickies-container {
+    border-top: 1px solid var(--border-column-board);
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fill, 200px);
+    gap: 20px;
+    padding: 10px;
+    overflow-y: scroll;
+    border-right: 1px solid var(--border-column-board);
+}
+
+.board-section input {
+    outline: none;
+    border: none;
+    padding-left: 20px;
+    font-size: 22px;
+    color: var(--important);
+    background-color: transparent;
+}
+
+.board-section input::placeholder {
+    color: var(--placeholder);
+}
+
+.board-section button {
+    cursor: pointer;
+    border: none;
+    background-color: var(--button1-bg);
+    border-radius: 5px;
+    color: var(--text);
+    font-size: 16px;
+    margin: 0 auto;
+}
+
+.sticky {
+    transition: 200ms;
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 14px;
+    background-color: rgb(180, 214, 255);
+}
+
+.sticky:hover {
+    scale: 1.025;
+}
+
+.no-stickies-message {
+    position: absolute;
+    top: 20%;
+    left: 33%;
+    font-size: 20px;
+    color: #ced2e6;
+    font-weight: 300;
+}
