--- a/src/frontend/css/general/main.css
+++ b/src/frontend/css/general/main.css
@@ -216,3 +216,38 @@ entity-options-menu span {
 .widget-style-shadow {
     box-shadow: var(--shadow-card);
 }
+
+
+
+
+
+
+
+
+/*__________________________BUTTON STYLES__________________________*/
+.modal-confirm-button {
+    background-color: var(--button1-bg);
+    color: var(--important);
+    padding: 10px 30px;
+    border-radius: 10px;
+    transition: 200ms;
+}
+
+.modal-cancel-button {
+    background-color: transparent;
+    font-size: 16px;
+    padding: 10px 30px;
+    border-radius: 30px;
+    color: var(--important);
+}
+
+
+.modal-confirm-button:hover {
+    color: #fff;
+    background-color: #5c7dff;
+    scale: 1.05;
+}
+
+.modal-cancel-button:hover {
+    scale: 1.05;
+}
