--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -10,7 +10,7 @@
     --editor-container: #23252e;
     --editor-container-shadow: transparent;
     --editor-container-input: #16171c;
-    --dropdown: linear-gradient(7deg, rgb(13 11 34) 6%, rgb(27 27 52) 100%);
+    --dropdown: #282833;
     --heading3: #9da0bd;
     --heading4: #8e91a3;
     --hover-slash-command: #181b3b;
@@ -31,9 +31,9 @@
     /*borders*/
     --border-notification: none;
     --border-note-view-dropdown: none;
-    --border-card: #282a3d;
+    --border-card: #181821;
     --border-column-board: #444d7d;
-    --border-sidebar-right: 1px solid#282a3d;
+    --border-sidebar-right: 1px solid #1e202f;
     --border-sidebar-soft: none;
     --border-checklist: 1px solid #27293b;
 
@@ -53,16 +53,16 @@
     --title-bar-button-color: #5c7fdd;
     --exit-btn: #28283b;
     --secondary: #5c7dff;
-    --background: linear-gradient(7deg, rgb(7 2 22) 6%, rgb(18 18 35) 100%);
+    --background: #353541;
     --notification: #0f0e1a;
     --subtitle: #9196aa;
-    --sidebar: linear-gradient(7deg, rgb(7 2 22) 6%, rgb(22 22 43) 100%);
-    --sidebar-soft: #0b0a14;
-    --searchbar: linear-gradient(7deg, rgb(21 19 47) 6%, rgb(28 28 61) 100%);
+    --sidebar: #353541;
+    --sidebar-soft: #353541;
+    --searchbar: #282833;
     --sidebar-text: #d6d8e5;
     --sidebar-text-hover: #5c7fdd; 
-    --card: linear-gradient(7deg, #151430 6%, #121124 100%) ;/*linear-gradient(7deg, rgb(27 26 47) 6%, rgb(16 16 35) 100%)*/
-    --folder: linear-gradient(20deg, #151430 6%, #121124 100%); /* TODO #setting option color 171531*/
+    --card: #282833 ;/*linear-gradient(7deg, rgb(27 26 47) 6%, rgb(16 16 35) 100%)*/
+    --folder: #282833; /* TODO #setting option color 171531*/
     --text: hsl(232, 20%, 78%);
     --text-soft: hsl(232, 20%, 60%);;
     --icon: #bbbed2;
@@ -72,26 +72,26 @@
     --less-important: hsl(232 22% 68% / 1);
     
     
-    --hover-searchbar-options: #0a0d1c;
+    --hover-searchbar-options: #181821;
     --hover-text: #5c7dff;
     --command-square-bg: transparent;
-    --hover-sidebar: #282b5e;
+    --hover-sidebar: #282833;
     --searchbar-placeholder: #d4d7e5; 
     --placeholder: #868b9e;
     --selection: #314682;
     --dialog: rgb(0 0 0 / 25%);
     --shadow: rgba(0, 0, 0, 0.1);
-    --modal: #12121d;
-    --searchbar-dropdown: #0b0a14;
+    --modal: #1d1d27;
+    --searchbar-dropdown: hsl(240 36.17% 13.41%);
     --scrollbar-content-view: #20274a;
-    --stats-background: #141322;
     --home-tab: #28283b;
     --options-menu: hsl(240 36.17% 13.41%);
     --options-menu-hover: hsl(240 53.85% 7.65%);
+    --color-picker-background: #12121d;
 
     /*Feedback variables*/
     --completed-checklist-task: #1c1d3b;
-
+    --empty-folder-icon-background: #1b1b27;
     --active-tab-bg: #5c7fdd;
     --active-tab-text: #fff;
 
@@ -197,7 +197,7 @@
     
     --hover-searchbar-options: #f7f7fa;
     --hover-text: #444863;
-    --hover-sidebar: #f8f8ff;
+    --hover-sidebar: #eceeff;
     --searchbar-placeholder: #9297aa; 
     --placeholder: #d4d7e5;
     --selection: #b1daff;
@@ -211,12 +211,13 @@
     --options-menu: hsl(235, 100%, 98%);
     --options-menu-hover: hsl(235, 100%, 95%);
 
+    --color-picker-background: #fff;
     --scrollbar-editor: #cfd2e2;
     /*Feedback variables*/
     --completed-checklist-task: #f8f9ff;
 
-    --active-tab-bg: #f4f5ff;
-    --active-tab-text: #2f3773;
+    --active-tab-bg: #eceeff;
+    --active-tab-text: #5c7fdd;
 
     /*Buttons*/
     --button1-bg: #f4f4fc;
