--- a/src/frontend/css/textEditor/textEditor.css
+++ b/src/frontend/css/textEditor/textEditor.css
@@ -103,11 +103,12 @@
  }
 
  .editor img {
-  cursor: pointer;
+     cursor: pointer;
+     border-radius: 10px;
    margin: 10px;
-   padding: 10px;
+     
+     width: fit-content;
    max-width: 600px;
-   border-radius: 10px;
    border: 1px dashed transparent;
  }
 
