You can now edit the current folder

--- a/src/frontend/css/general/main.css
+++ b/src/frontend/css/general/main.css
@@ -181,6 +181,7 @@ entity-options-menu div:hover {
 
 entity-options-menu i {
     font-size: 14px;
+    margin-right: 15px;
 }
 
 entity-options-menu span {
