--- a/src/frontend/css/general/scrollbar.css
+++ b/src/frontend/css/general/scrollbar.css
@@ -9,8 +9,7 @@
 .standard-sticky-board-view::-webkit-scrollbar,
 .column-sticky-board-view::-webkit-scrollbar,
 .slash-command-container .commands::-webkit-scrollbar,
-.recently-viewed-notes-dropdown .options::-webkit-scrollbar,
-.emoji-picker-container .tabpanel::-webkit-scrollbar {
+.recently-viewed-notes-dropdown .options::-webkit-scrollbar {
     background-color: transparent;
     width: 5px;
 }
@@ -37,18 +36,19 @@
 .column-sticky-board-view::-webkit-scrollbar-thumb,
 .sticky-home-view::-webkit-scrollbar-thumb,
 .slash-command-container .commands::-webkit-scrollbar-thumb,
-.recently-viewed-notes-dropdown .options::-webkit-scrollbar-thumb,
-.emoji-picker-container .tabpanel::-webkit-scrollbar-thumb {
+.recently-viewed-notes-dropdown .options::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-content-view);
     border-radius: 10px;
 }
 
-.sidebar-content-upper::-webkit-scrollbar {
+.sidebar-content-upper::-webkit-scrollbar,
+.note-view-options-dropdown .dropdown-items::-webkit-scrollbar{
     background-color: transparent;
     width: 0;
 }
 
-.sidebar-content-upper::-webkit-scrollbar-thumb {
+.sidebar-content-upper::-webkit-scrollbar-thumb,
+.note-view-options-dropdown .dropdown-items::-webkit-scrollbar-thumb {
     background-color: transparent;
     border-radius: 10px;
 }
