--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -10,7 +10,7 @@
     --editor-container: #23252e;
     --editor-container-shadow: transparent;
     --editor-container-input: #16171c;
-    --dropdown: #282833;
+    --dropdown: #20202f;
     --heading3: #9da0bd;
     --heading4: #8e91a3;
     --hover-slash-command: #181b3b;
@@ -42,7 +42,7 @@
 
     /*Hover*/
     --hover-button: #0f0e1a;
-    --hover-checklist-task: #15162d;
+    --hover-checklist-task: #202134;
     
     /*Shadows*/
     --shadow-dropdown: 5px 5px 18px #030304;
@@ -53,16 +53,16 @@
     --title-bar-button-color: #5c7fdd;
     --exit-btn: #28283b;
     --secondary: #5c7dff;
-    --background: #353541;
+    --background: #16161a;
     --notification: #0f0e1a;
     --subtitle: #9196aa;
-    --sidebar: #353541;
-    --sidebar-soft: #353541;
-    --searchbar: #282833;
+    --sidebar: #16161a;
+    --sidebar-soft: #16161a;
+    --searchbar: #20202f;
     --sidebar-text: #d6d8e5;
     --sidebar-text-hover: #5c7fdd; 
-    --card: #282833 ;/*linear-gradient(7deg, rgb(27 26 47) 6%, rgb(16 16 35) 100%)*/
-    --folder: #282833; /* TODO #setting option color 171531*/
+    --card: #20202f ;
+    --folder: #20202f; /* TODO #setting option color 171531*/
     --text: hsl(232, 20%, 78%);
     --text-soft: hsl(232, 20%, 60%);;
     --icon: #bbbed2;
@@ -75,7 +75,7 @@
     --hover-searchbar-options: #181821;
     --hover-text: #5c7dff;
     --command-square-bg: transparent;
-    --hover-sidebar: #282833;
+    --hover-sidebar: #242430;
     --searchbar-placeholder: #d4d7e5; 
     --placeholder: #868b9e;
     --selection: #314682;
@@ -83,22 +83,22 @@
     --shadow: rgba(0, 0, 0, 0.1);
     --modal: #1d1d27;
     --searchbar-dropdown: hsl(240 36.17% 13.41%);
-    --scrollbar-content-view: #20274a;
+    --scrollbar-content-view: #0d0d12;
     --home-tab: #28283b;
-    --options-menu: hsl(240 36.17% 13.41%);
-    --options-menu-hover: hsl(240 53.85% 7.65%);
+    --options-menu: #20202f;
+    --options-menu-hover: #161620;
     --color-picker-background: #12121d;
 
     /*Feedback variables*/
-    --completed-checklist-task: #1c1d3b;
+    --completed-checklist-task: #28293f;
     --empty-folder-icon-background: #1b1b27;
     --active-tab-bg: #5c7fdd;
     --active-tab-text: #fff;
 
-    --scrollbar-editor: #20274a;
+    --scrollbar-editor: #0d0d12;
     /*Buttons*/
-    --button1-bg: #181b3b;
-    --button1-hover: #151838;
+    --button1-bg: #20202f;
+    --button1-hover: #2a2a40;
 }
 
 .light {
