--- a/src/frontend/css/general/scrollbar.css
+++ b/src/frontend/css/general/scrollbar.css
@@ -1,9 +1,10 @@
-.searchbar ul::-webkit-scrollbar,
+autocomplete-searchbar .searchbar-dropdown::-webkit-scrollbar,
 .content-view::-webkit-scrollbar,
 .note-view-content::-webkit-scrollbar,
 .font-options::-webkit-scrollbar,
 .home .middle::-webkit-scrollbar,
 .editor-wrapper .templates-container::-webkit-scrollbar,
+.board-wrapper::-webkit-scrollbar,
 .sticky-wall-view::-webkit-scrollbar,
 .sticky-home-view::-webkit-scrollbar,
 .standard-sticky-board-view::-webkit-scrollbar,
@@ -25,12 +26,13 @@
 }
 
 
-.searchbar ul::-webkit-scrollbar-thumb,
+autocomplete-searchbar .searchbar-dropdown::-webkit-scrollbar-thumb,
 .font-options::-webkit-scrollbar-thumb,
 .content-view::-webkit-scrollbar-thumb,
 .note-view-content::-webkit-scrollbar-thumb,
 .home .middle::-webkit-scrollbar-thumb,
 .editor-wrapper .templates-container::-webkit-scrollbar-thumb,
+.board-wrapper::-webkit-scrollbar-thumb,
 .sticky-wall-view::-webkit-scrollbar-thumb,
 .standard-sticky-board-view::-webkit-scrollbar-thumb,
 .column-sticky-board-view::-webkit-scrollbar-thumb,
