The note filter infrastructure is laid down for the bookmarks, categories and tags

--- a/src/frontend/css/components/entities/sticky.css
+++ b/src/frontend/css/components/entities/sticky.css
@@ -64,6 +64,8 @@ sticky-board div {
 
 sticky-board p {
     margin: 0;
+    padding: 5px;
+    text-align: center;
     color: var(--important);
 }
 
