--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -71,7 +71,7 @@
     --important: hsl(232, 22%, 87%);
     --less-important: hsl(232 22% 68% / 1);
     
-    --background-column: #eaedf2;
+    --background-column: #25272f;
     --hover-searchbar-options: #181821;
     --hover-text: #5c7dff;
     --command-square-bg: transparent;
@@ -100,25 +100,71 @@
     /*Buttons*/
     --button1-bg: #20202f;
     --button1-hover: #2a2a40;
-    --column-board-button: #25272f;
+    --column-board-button: #ccdbff;
+
+
+    /*folder appearance classes */
+
+    --background-blue-1: rgb(121, 144, 255);
+    --background-blue-2: rgb(80, 141, 196);
+    --background-blue-3: rgb(122, 179, 228);
+    --background-blue-4: rgb(81, 159, 172);
+    --background-green-1: rgb(100, 174, 152);
+    --background-green-2: rgb(153, 230, 145);
+    --background-green-3: rgb(123, 219, 113);
+    --background-purple-1: rgb(142, 122, 181);
+    --background-purple-2: rgb(180, 152, 210);
+    --background-red-1: rgb(196, 91, 91);
+    --background-red-2: rgb(228, 141, 141);
+    --background-orange-1: rgb(224, 154, 91);
+    --background-orange-2: rgb(243, 182, 114);
+
+    --color-blue-1: rgb(31 41 89);
+    --color-blue-2: rgb(7 63 113);
+    --color-blue-3: rgb(34 122 200);
+    --color-blue-4: rgb(34, 97, 94);
+    --color-green-1: rgb(49 122 101);
+    --color-green-2: rgb(80 175 69);
+    --color-green-3: rgb(9 90 0);
+    --color-purple-1: rgb(100, 58, 178);
+    --color-purple-2: rgb(121 85 161);
+    --color-red-1: #742828;
+    --color-red-2: rgb(192 43 43);
+    --color-orange-1: rgb(193 91 0);
+    --color-orange-2: rgb(225 132 20);
 }
 
 .light {
 
 
     /* Folder colors */
-    --dark-blue-folder: rgb(121, 144, 255);
-    --sky-blue-folder: rgb(169, 215, 255);
-    --light-blue-folder: rgb(217, 237, 255);
-    --torquise-green-folder: rgb(158, 213, 197);
-    --soft-green-folder: rgb(203, 255, 197);
-    --light-green-folder: rgb(173, 255, 164);
-    --dark-purple-folder: rgb(142, 122, 181);
-    --light-purple-folder: rgb(223, 193, 255);
-    --dark-red-folder: rgb(255, 163, 163);
-    --light-red-folder: rgb(255, 197, 197);
-    --dark-orange-folder: rgb(255, 182, 116);
-    --light-orange-folder: rgb(255, 224, 158);
+    --background-blue-1: rgb(121, 144, 255);
+    --background-blue-2: rgb(169, 215, 255);
+    --background-blue-3: rgb(217, 237, 255);
+    --background-blue-4: rgb(124, 199, 211);
+    --background-green-1: rgb(158, 213, 197);
+    --background-green-2: rgb(203, 255, 197);
+    --background-green-3: rgb(173, 255, 164);
+    --background-purple-1: rgb(142, 122, 181);
+    --background-purple-2: rgb(223, 193, 255);
+    --background-red-1: rgb(255, 163, 163);
+    --background-red-2: rgb(255, 197, 197);
+    --background-orange-1: rgb(255, 182, 116);
+    --background-orange-2: rgb(255, 224, 158);
+
+    --color-blue-1: rgb(50, 72, 177);
+    --color-blue-2: rgb(70, 158, 239);
+    --color-blue-3: rgb(143, 191, 236);
+    --color-blue-4: rgb(34, 97, 94);
+    --color-green-1: rgb(36, 169, 130);
+    --color-green-2: rgb(85, 183, 73);
+    --color-green-3: rgb(32, 146, 20);
+    --color-purple-1: rgb(100, 58, 178);
+    --color-purple-2: rgb(167, 103, 236);
+    --color-red-1: rgb(225, 82, 82);
+    --color-red-2: rgb(255, 108, 108);
+    --color-orange-1: rgb(220, 109, 10);
+    --color-orange-2: rgb(239, 170, 21);
 
 
 
