--- a/src/frontend/css/components/entities/folder.css
+++ b/src/frontend/css/components/entities/folder.css
@@ -88,6 +88,7 @@ pinned-folder {
 
 pinned-folder i {
     margin: 0 5px;
+    font-size: 18px;
 }
 
 
@@ -115,60 +116,33 @@ pinned-folder:hover {
 .color-orange-2 p {color: #1b1c22}
 
 
-.light .color-blue-1 {background: rgb(121, 144, 255)}
-.light .color-blue-2 {background: rgb(169, 215, 255)}
-.light .color-blue-3 {background: rgb(217, 237, 255)}
-.light .color-blue-4 {background: rgb(124, 199, 211)}
-.light .color-green-1 {background: rgb(158, 213, 197)}
-.light .color-green-2 {background: rgb(203, 255, 197)}
-.light .color-green-3 {background: rgb(173, 255, 164)}
-.light .color-purple-1 {background: rgb(142, 122, 181)}
-.light .color-purple-2 {background: rgb(223, 193, 255)}
-.light .color-red-1 {background: rgb(255, 163, 163)}
-.light .color-red-2 {background: rgb(255, 197, 197)}
-.light .color-orange-1 {background: rgb(255, 182, 116)}
-.light .color-orange-2 {background: rgb(255, 224, 158)}
-
-.light .color-blue-1 #folder-icon {color: rgb(50, 72, 177) !important;}
-.light .color-blue-2 #folder-icon {color: rgb(70, 158, 239)  !important;}
-.light .color-blue-3 #folder-icon {color: rgb(143, 191, 236) !important;}
-.light .color-blue-4 #folder-icon {color: rgb(34, 97, 94) !important;}
-.light .color-green-1 #folder-icon {color: rgb(36, 169, 130) !important;}
-.light .color-green-2 #folder-icon {color: rgb(85, 183, 73) !important;}
-.light .color-green-3 #folder-icon {color: rgb(32, 146, 20) !important;}
-.light .color-purple-1 #folder-icon {color: rgb(100, 58, 178) !important;}
-.light .color-purple-2 #folder-icon {color: rgb(167, 103, 236) !important;}
-.light .color-red-1 #folder-icon { color: rgb(225, 82, 82) !important;}
-.light .color-red-2 #folder-icon {color: rgb(255, 108, 108) !important;}
-.light .color-orange-1 #folder-icon {color: rgb(220, 109, 10) !important;}
-.light .color-orange-2 #folder-icon {color: rgb(239, 170, 21) !important;}
+.color-blue-1 { background: var(--background-blue-1); }
+.color-blue-2 { background: var(--background-blue-2); }
+.color-blue-3 { background: var(--background-blue-3); }
+.color-blue-4 { background: var(--background-blue-4); }
+.color-green-1 { background: var(--background-green-1);}
+.color-green-2 { background: var(--background-green-2); }
+.color-green-3 { background: var(--background-green-3); }
+.color-purple-1 { background: var(--background-purple-1); }
+.color-purple-2 { background: var(--background-purple-2); }
+.color-red-1 { background: var(--background-red-1); }
+.color-red-2 { background: var(--background-red-2); }
+.color-orange-1 { background: var(--background-orange-1); }
+.color-orange-2 { background: var(--background-orange-2); }
 
 
-.dark .color-blue-1 {background: rgb(121, 144, 255)}
-.dark .color-blue-2 {background: rgb(80 141 196)}
-.dark .color-blue-3 {background: rgb(122 179 228)}
-.dark .color-blue-4 {background: rgb(81, 159, 172)}
-.dark .color-green-1 {background: rgb(100 174 152)}
-.dark .color-green-2 {background: rgb(153 230 145)}
-.dark .color-green-3 {background: rgb(123 219 113)}
-.dark .color-purple-1 {background: rgb(142, 122, 181)}
-.dark .color-purple-2 {background: rgb(180 152 210)}
-.dark .color-red-1 {background: rgb(196 91 91)}
-.dark .color-red-2 {background: rgb(228 141 141)}
-.dark .color-orange-1 {background: rgb(224 154 91)}
-.dark .color-orange-2 {background: rgb(243 182 114)}
 
-.dark .color-blue-1 #folder-icon {color: rgb(31 41 89) !important;}
-.dark .color-blue-2 #folder-icon {color: rgb(7 63 113) !important;}
-.dark .color-blue-3 #folder-icon {color: rgb(34 122 200) !important;}
-.dark .color-blue-4 #folder-icon {color: rgb(34, 97, 94) !important;}
-.dark .color-green-1 #folder-icon {color: rgb(49 122 101) !important;}
-.dark .color-green-2 #folder-icon {color: rgb(80 175 69) !important;}
-.dark .color-green-3 #folder-icon {color: rgb(9 90 0) !important;}
-.dark .color-purple-1 #folder-icon {color: rgb(100, 58, 178) !important;}
-.dark .color-purple-2 #folder-icon {color: rgb(121 85 161) !important;}
-.dark .color-red-1 #folder-icon { color: #742828 !important;}
-.dark .color-red-2 #folder-icon {color: rgb(192 43 43) !important;}
-.dark .color-orange-1 #folder-icon {color: rgb(193 91 0) !important;}
-.dark .color-orange-2 #folder-icon {color: rgb(225 132 20) !important;}
+.color-blue-1 #folder-icon { color: var(--color-blue-1) !important; }
+.color-blue-2 #folder-icon { color: var(--color-blue-2) !important; }
+.color-blue-3 #folder-icon { color: var(--color-blue-3) !important; }
+.color-blue-4 #folder-icon { color: var(--color-blue-4) !important; }
+.color-green-1 #folder-icon { color: var(--color-green-1) !important; }
+.color-green-2 #folder-icon { color: var(--color-green-2) !important; }
+.color-green-3 #folder-icon { color: var(--color-green-3) !important; }
+.color-purple-1 #folder-icon { color: var(--color-purple-1) !important; }
+.color-purple-2 #folder-icon { color: var(--color-purple-2) !important; }
+.color-red-1 #folder-icon { color: var(--color-red-1) !important; }
+.color-red-2 #folder-icon { color: var(--color-red-2) !important; }
+.color-orange-1 #folder-icon { color: var(--color-orange-1) !important; }
+.color-orange-2 #folder-icon { color: var(--color-orange-2) !important; }
 
