--- a/src/frontend/css/components/pageBlocks/pageBlocks.css
+++ b/src/frontend/css/components/pageBlocks/pageBlocks.css
@@ -94,3 +94,44 @@ terminal-snippet {
 .terminal-bar i:active {
     scale: 1.5;
 }
+
+
+
+/*__________ REREFENCE ITEM __________*/
+
+reference-item-card {
+    cursor: pointer;
+    border: 1px solid var(--border-card);
+    border-radius: 5px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    width: fit-content;
+    min-width: 300px;
+    transition: 150ms;
+}
+
+
+reference-item-card:hover {
+    scale: 1.05;
+}
+
+reference-item-card i {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    background-color: var(--reference-item-icon);
+    color: #5c7fdd;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+reference-item-card span {
+    margin: 0;
+    font-size: 13px;
+    color: var(--editor-text);
+}
