--- a/src/frontend/css/modals/deleteModal.css
+++ b/src/frontend/css/modals/deleteModal.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
-    width: 500px;
+    min-width: 600px;
     box-shadow: 0 10px 20px var(--shadow);
     background-color: var(--modal);
 }
