--- a/src/frontend/css/modals/editFolderModal.css
+++ b/src/frontend/css/modals/editFolderModal.css
@@ -1,4 +1,4 @@
-.edit-folder-modal {
+organisation-modal {
     background-color: var(--modal);
     display: flex;
     flex-direction: column;
@@ -9,12 +9,24 @@
     box-shadow: 0 10px 20px var(--shadow);
 }
 
-.edit-folder-modal h2 {
+organisation-modal h2 {
     color: var(--important);
     font-size: 32px;
     margin: 0;
     font-weight: 500;
 }
+
+
+organisation-modal h2 i {
+    margin: 0 10px;
+}
+
+
+organisation-modal p {
+    color: var(--less-important);
+    max-width: 550px;
+}
+
 
 .folder-settings {
     display: flex;
@@ -29,7 +41,7 @@
 }
 
 
-.edit-folder-modal input {
+organisation-modal input {
     border: none;
     background-color: transparent;
     border-bottom: 2px solid var(--inactive-border);
@@ -41,13 +53,19 @@
     transition: 200ms;
 }
 
-.edit-folder-modal input:hover,
-.edit-folder-modal input:focus {
+organisation-modal input:hover,
+organisation-modal input:focus {
     border-color: #5c7dff;
 }
 
 
-.folder-color-options #color-option {
+appearance-options {
+    display: flex;
+    padding: 20px 10px;
+}
+
+
+appearance-options #color-option {
     min-width: 25px;
     height: 25px;
     border-radius: 50%;
@@ -56,7 +74,7 @@
     border: 2px solid transparent;
 }
 
-.folder-color-options .color-option-wrapper {
+appearance-options .color-option-wrapper {
     padding: 5px;
     border-radius: 50%;
     width: 40px;
@@ -98,7 +116,7 @@
 
 #open-emoji-picker-btn {
     position: absolute;
-    top: 37%;
+    top: 45%;
     right: 10%;
     color: var(--placeholder);
     font-size: 20px;
